Update Image_Classification Using CNN.ipynb

--- a/Image_Classification Using CNN.ipynb
+++ b/Image_Classification Using CNN.ipynb
@@ -5,7 +5,7 @@
    "id": "f2001333",
    "metadata": {},
    "source": [
-    "# Manisha Boyina (ne5602) Assignment 2 \n",
+    "# Image Classification using CNN \n",
     "\n",
     "\n",
     "\n",
